# neovim-tmux-navigator

./: Cargo.toml  Makefile  README.md
plugin/: neovim-tmux-navigator.vim
src/: cli.rs  main.rs  neovim_server.rs  tmux_client.rs  tmux_util.rs
